tweaking css to prevent overflows on homepage

--- a/ms_kiersten/ms_kiersten/static/ms_kiersten/css/ms_kiersten.css
+++ b/ms_kiersten/ms_kiersten/static/ms_kiersten/css/ms_kiersten.css
@@ -53,7 +53,7 @@ ul, ol {
     width: 100%;
     display: grid;
     grid-template-columns: 40% 60%;
-    grid-template-rows: auto auto 35vh auto;
+    grid-template-rows: auto auto auto auto;
     row-gap: .5rem;
 
     grid-template-areas:
@@ -70,6 +70,8 @@ ul, ol {
         grid-template-areas: "nametag nametag nametag"
             "na tagline poop"
             "hero_sticker content links";
+
+        row-gap: 1em;
     }
 }
 
@@ -82,11 +84,13 @@ ul, ol {
     .main_grid {
         max-width: 1400px;
         grid-template-columns: 20% 10% 40% 30%;
-        grid-template-rows: auto 20vh 35vh auto;
+        grid-template-rows: auto auto auto auto;
 
         grid-template-areas: "spacer nametag nametag na"
             "hero_sticker tagline tagline na"
-            "hero_sticker content content links"
+            "hero_sticker content content links";
+
+        row-gap: 2em;
     }
 }
 
@@ -251,12 +255,13 @@ ul, ol {
 
     z-index: 10;
     width: 90%;
-    height: 100%;
+    height: fit-content;
     justify-self: end;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
 }
 
 .content {
+    box-sizing: border-box;
     padding: 1em .5em 1em;
 }
 
